adapted config for the Fabrikator Mini

--- a/fabrikator-mini.ini
+++ b/fabrikator-mini.ini
@@ -5,7 +5,7 @@ PRUBIN=xenomai/pru_generic.bin
 [EMC]
 
 # Name of machine, for use with display, etc.
-MACHINE =               MendelMax CRAMPS
+MACHINE =               Fabrikator Mini CRAMPS
 
 # Debug level, 0 means no messages. See src/emc/nml_int/emcglb.h for others
 #DEBUG =                0x00000003
@@ -137,7 +137,7 @@ SERVO_PERIOD =          1000000
 # list of hal config files to run through halcmd
 # files are executed in the order in which they appear
 
-HALFILE = mendelmax.py
+HALFILE = fabrikator_mini.py
 
 # list of halcmd commands to execute
 # commands are executed in the order in which they appear
@@ -195,17 +195,17 @@ BACKLASH =           0.000
 
 # scale is 200 steps/rev * 5 revs/inch
 # SCALE =  80.4 -- Artifex
-SCALE = -80.0
+SCALE = -201.01
 
-MIN_LIMIT =             -95.0
-MAX_LIMIT =             95.0
+MIN_LIMIT =             -40.0
+MAX_LIMIT =             40.0
 
 FERROR =     0.1
 #MIN_FERROR = 0.25
 MIN_FERROR = 0.1
 
 HOME =                  0.000
-HOME_OFFSET =           95.00
+HOME_OFFSET =           40.00
 HOME_IGNORE_LIMITS =    YES
 HOME_USE_INDEX =        NO
 HOME_SEQUENCE =         1
@@ -222,6 +222,19 @@ DIRHOLD    =              200
 STEPLEN    =              1000
 STEPSPACE  =              1000
 
+# PID tuning params for
+# workaround for PRU dir pin problems
+DEADBAND =              0
+P =                     90
+I =                     0
+D =                     0
+FF0 =                   0
+FF1 =                   1
+FF2 =                   0.00005
+BIAS =                  0
+MAX_OUTPUT =            0
+MAX_ERROR =             0.0005
+
 INCREMENTS = 1 10
 
 
@@ -236,17 +249,17 @@ STEPGEN_MAX_ACC =    3600.0
 
 BACKLASH =           0.000
 
-SCALE = -80.0
+SCALE = -201.01
 
-MIN_LIMIT =             -85.0
-MAX_LIMIT =             85.0
+MIN_LIMIT =             -40.0
+MAX_LIMIT =             40.0
 
 FERROR =     0.1
 #MIN_FERROR = 0.25
 MIN_FERROR = 0.1
 
 HOME =                  0.000
-HOME_OFFSET =           85.00
+HOME_OFFSET =           40.00
 HOME_IGNORE_LIMITS =    YES
 HOME_USE_INDEX =        NO
 HOME_SEQUENCE =         1
@@ -263,6 +276,19 @@ DIRHOLD    =              200
 STEPLEN    =              1000
 STEPSPACE  =              1000
 
+# PID tuning params for
+# workaround for PRU dir pin problems
+DEADBAND =              0
+P =                     90
+I =                     0
+D =                     0
+FF0 =                   0
+FF1 =                   1
+FF2 =                   0.00005
+BIAS =                  0
+MAX_OUTPUT =            0
+MAX_ERROR =             0.0005
+
 INCREMENTS = 1 10
 
 
@@ -277,11 +303,10 @@ STEPGEN_MAX_ACC =    36.0
 
 BACKLASH =           0.000
 
-#SCALE = -1542.036 -- Artifex
-SCALE = -2560.0
+SCALE = 6366.88
 
-MIN_LIMIT =             -10.0
-MAX_LIMIT =             165.0
+MIN_LIMIT =             -5.0
+MAX_LIMIT =             80.0
 
 FERROR =     0.1
 MIN_FERROR = 0.1
@@ -304,13 +329,27 @@ DIRHOLD    =              200
 STEPLEN    =              1000
 STEPSPACE  =              1000
 
+# PID tuning params for
+# workaround for PRU dir pin problems
+DEADBAND =              0
+P =                     90
+I =                     0
+D =                     0
+FF0 =                   0
+FF1 =                   1
+FF2 =                   0.00005
+BIAS =                  0
+MAX_OUTPUT =            0
+MAX_ERROR =             0.0005
+
 INCREMENTS = 0.01 0.1 1
 
 [FDM]
 VELOCITY_EXTRUSION_ENABLE = 1
 NUM_EXTRUDERS = 1
-NUM_FANS = 1
+NUM_FANS = 0
 NUM_LIGHTS = 0
+HAS_HBP = 0
 
 [EXTRUDER_0]
 PID_PGAIN              = 0.3
@@ -344,8 +383,8 @@ STEPGEN_MAX_ACC = 3600.0
 #SCALE = -486.15 -- Artifex
 #SCALE = 495.0 -- Bulldog XL
 #SCALE = -107.0 -- Bulldog Lite Original
-#SCALE = -90.0
-SCALE = 744.530002058
+#SCALE = 744.530002058 -- MendelMax
+SCALE = -97.11
 
 # these are in nanoseconds
 DIRSETUP   =              200
