modifications for Rostock

--- a/launcher.ini
+++ b/launcher.ini
@@ -1,9 +1,9 @@
 [DEFAULT]
-manufacturer = Alex
+manufacturer = John
 type = FDM
 
-[MendelMax]
-name = MendelMax CRAMPS
+[Rostock]
+name = Rostock CRAMPS
 description =  DIY 3D printer
 command = python run.py
-variant = with one extruder
+variant = Delta printer with one extruder
