--- a/rostock.ini
+++ b/rostock.ini
@@ -5,12 +5,26 @@ PRUBIN=xenomai/pru_generic.bin
 [EMC]
 
 # Name of machine, for use with display, etc.
-MACHINE =               Fabrikator Mini CRAMPS
+MACHINE =               Rostock
 
 # Debug level, 0 means no messages. See src/emc/nml_int/emcglb.h for others
 #DEBUG =                0x00000003
 #DEBUG =                0x00000007
 DEBUG = 0
+
+[MACHINE]
+# Machine configuration for delta printer
+# when calibrating, if a move at the center (0,0) is actual
+# lower than should be (moves into the bed) , then decrease
+# the delta radius
+
+DELTA_R = 125
+
+# now when the effector travels over the bed in a straight line
+# insert a fineliner in the effector and draw a 10x10 cm square
+# measure the square and decrease the rod length if the drawing is
+# bigger than should be. After that do the delta radius correction
+CF_ROD = 250
 
 
 [DISPLAY]
@@ -80,7 +94,6 @@ PARAMETER_FILE =        pru-stepper.var
 # use directory in config path until more suitable location. this w.r.t the
 # fact that not every machine will have an extruder and/or fan
 SUBROUTINE_PATH = /usr/share/linuxcnc/ncfiles/remap-subroutines/fdm
-#SUBROUTINE_PATH = subroutines
 
 # remapping Machinekit FDM GCodes
 REMAP=G22 modalgroup=1 ngc=g22
@@ -137,7 +150,7 @@ SERVO_PERIOD =          1000000
 # list of hal config files to run through halcmd
 # files are executed in the order in which they appear
 
-HALFILE = fabrikator_mini.py
+HALFILE = rostock.py
 
 # list of halcmd commands to execute
 # commands are executed in the order in which they appear
@@ -162,9 +175,9 @@ LINEAR_UNITS =              mm
 ANGULAR_UNITS =             degree
 CYCLE_TIME =                0.010
 DEFAULT_LINEAR_VELOCITY =   20.0
-MAX_LINEAR_VELOCITY =       250.00
+MAX_LINEAR_VELOCITY =       80.00
 DEFAULT_VELOCITY =          20.00
-MAX_VELOCITY =              250.0
+MAX_VELOCITY =              80.0
 TIME_UNITS =                s
 #NO_FORCE_HOMING = 1
 
@@ -185,30 +198,25 @@ TIME_UNITS =                s
 
 
 TYPE =              LINEAR
-MAX_VELOCITY =       200.0
-MAX_ACCELERATION =   3000.0
-# Set Stepgen max 20% higher than the axis
-STEPGEN_MAX_VEL =    240.0
-STEPGEN_MAX_ACC =    3600.0
+MAX_VELOCITY =       280.0
+MAX_ACCELERATION =   2400.0
+STEPGEN_MAX_VEL =    384.0
+STEPGEN_MAX_ACC =    7200.0
 
 BACKLASH =           0.000
 
-# scale is 200 steps/rev * 5 revs/inch
-# SCALE =  80.4 -- Artifex
-SCALE = -201.01
-
-MIN_LIMIT =             -40.0
-MAX_LIMIT =             40.0
-
-FERROR =     0.1
-#MIN_FERROR = 0.25
-MIN_FERROR = 0.1
-
-HOME =                  0.000
-HOME_OFFSET =           40.00
+SCALE = 80
+MIN_LIMIT =             -1.0
+MAX_LIMIT =             300.00
+FERROR =     4.0
+MIN_FERROR = 0.25
+HOME =                  275.00
+HOME_OFFSET =          275.00
 HOME_IGNORE_LIMITS =    YES
 HOME_USE_INDEX =        NO
-HOME_SEQUENCE =         1
+HOME_SEQUENCE =         0
+HOME_SEARCH_VEL =       20.0
+HOME_LATCH_VEL =       -1.0
 
 # Set to zero if you don't have physical home/limit switches
 # Set to the desired homing and latch velocity if you have switches
@@ -241,34 +249,24 @@ INCREMENTS = 1 10
 [AXIS_1]
 
 TYPE =              LINEAR
-MAX_VELOCITY =       200.0
-MAX_ACCELERATION =   3000.0
-# Set Stepgen max 20% higher than the axis
-STEPGEN_MAX_VEL =    240.0
-STEPGEN_MAX_ACC =    3600.0
+MAX_VELOCITY =       280.0
+MAX_ACCELERATION =   2400.0
+STEPGEN_MAX_VEL =    384.0
+STEPGEN_MAX_ACC =    7200.0
 
 BACKLASH =           0.000
-
-SCALE = -201.01
-
-MIN_LIMIT =             -40.0
-MAX_LIMIT =             40.0
-
-FERROR =     0.1
-#MIN_FERROR = 0.25
-MIN_FERROR = 0.1
-
-HOME =                  0.000
-HOME_OFFSET =           40.00
+SCALE = 80
+MIN_LIMIT =             -1.0
+MAX_LIMIT =             300.00
+FERROR =     4.0
+MIN_FERROR = 0.25
+HOME =                  275.00
+HOME_OFFSET =          275.00
 HOME_IGNORE_LIMITS =    YES
 HOME_USE_INDEX =        NO
-HOME_SEQUENCE =         1
-
-# Set to zero if you don't have physical home/limit switches
-# Set to the desired homing and latch velocity if you have switches
-# See: http://www.linuxcnc.org/docs/2.5/html/config/ini_homing.html
+HOME_SEQUENCE =         0
 HOME_SEARCH_VEL =       20.0
-HOME_LATCH_VEL =        -5.0
+HOME_LATCH_VEL =       -1.0
 
 # these are in nanoseconds
 DIRSETUP   =              200
@@ -295,33 +293,24 @@ INCREMENTS = 1 10
 [AXIS_2]
 
 TYPE =              LINEAR
-MAX_VELOCITY =      4.0
-MAX_ACCELERATION =  30.0
-# Set Stepgen max 20% higher than the axis
-STEPGEN_MAX_VEL =    4.8
-STEPGEN_MAX_ACC =    36.0
+MAX_VELOCITY =       280.0
+MAX_ACCELERATION =   2400.0
+STEPGEN_MAX_VEL =    384.0
+STEPGEN_MAX_ACC =    7200.0
 
 BACKLASH =           0.000
-
-SCALE = 6366.88
-
-MIN_LIMIT =             -5.0
-MAX_LIMIT =             80.0
-
-FERROR =     0.1
-MIN_FERROR = 0.1
-
-HOME =                  0.000
-HOME_OFFSET =           0.00
+SCALE = 80
+MIN_LIMIT =             -1.0
+MAX_LIMIT =             300.00
+FERROR =     4.0
+MIN_FERROR = 0.25
+HOME =                  275.00
+HOME_OFFSET =          275.00
 HOME_IGNORE_LIMITS =    YES
 HOME_USE_INDEX =        NO
 HOME_SEQUENCE =         0
-
-# Set to zero if you don't have physical home/limit switches
-# Set to the desired homing and latch velocity if you have switches
-# See: http://www.linuxcnc.org/docs/2.5/html/config/ini_homing.html
-HOME_SEARCH_VEL =       -2.0
-HOME_LATCH_VEL  =       -0.1
+HOME_SEARCH_VEL =       20.0
+HOME_LATCH_VEL =       -1.0
 
 # these are in nanoseconds
 DIRSETUP   =              200
@@ -347,9 +336,9 @@ INCREMENTS = 0.01 0.1 1
 [FDM]
 VELOCITY_EXTRUSION_ENABLE = 1
 NUM_EXTRUDERS = 1
-NUM_FANS = 0
+NUM_FANS = 1
 NUM_LIGHTS = 0
-HAS_HBP = 0
+HAS_HBP = 1
 
 [EXTRUDER_0]
 PID_PGAIN              = 0.3
@@ -364,12 +353,12 @@ TEMP_RANGE_LOWPASSGAIN = 0.0008
 TEMP_LIMIT_MIN         = 0.0
 TEMP_LIMIT_MAX         = 300.0
 TEMP_STANDBY           = 200.0
-THERMISTOR             = epcos_B57560G1104
+THERMISTOR             = 3950-100k
 
 RETRACT_LEN            = 0.5
 RETRACT_VEL            = 15.0
 
-FILAMENT_DIA           = 3.00
+FILAMENT_DIA           = 1.75
 EXTRUDE_SCALE          = 1.00
 
 FAN_BIAS = 0.0
@@ -384,7 +373,7 @@ STEPGEN_MAX_ACC = 3600.0
 #SCALE = 495.0 -- Bulldog XL
 #SCALE = -107.0 -- Bulldog Lite Original
 #SCALE = 744.530002058 -- MendelMax
-SCALE = -97.11
+SCALE = -160.0
 
 # these are in nanoseconds
 DIRSETUP   =              200
@@ -396,17 +385,16 @@ STEPSPACE  =              1000
 [HBP]
 PID_PGAIN              = 1.0
 PID_IGAIN              = 0.0
-PID_DGAIN              = 0.00
+PID_DGAIN              = 0.03
 PID_MAXERRORI          = 1.0
 PID_BIAS               = 0.5
 PWM_MAX                = 1.0
-TEMP_RANGE_POS_ERROR   = 10.0
-TEMP_RANGE_NEG_ERROR   = -2.0
+TEMP_RANGE_POS_ERROR   = 3.0
+TEMP_RANGE_NEG_ERROR   = -3.0
 TEMP_LIMIT_MIN         = 0.0
-TEMP_LIMIT_MAX         = 150.0
+TEMP_LIMIT_MAX         = 170.0
 TEMP_STANDBY           = 50.0
-THERMISTOR             = murata_NCP21WF104
-
+THERMISTOR             = 3950-100k
 
 [PROBE]
 COUNT = 1
